--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "nodemon server.js"
+    "run": "nodemon server.js",
+    "migrate": "node tools\\mt.js"
   },
   "author": "BM",
   "license": "ISC",
@@ -16,7 +17,11 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.2.0",
-    "mongoose": "^5.12.13",
+    "mongoose": "^6.0.12",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.7.2"
+  },
+  "devDependencies": {
+    "mongodb": "^3.7.3"
   }
 }
