--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",    
+    "cors": "^2.8.5",
     "dotenv": "^14.2.0",
+    "email-templates": "^11.0.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.2.0",
     "mongoose": "^6.0.12",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "mongodb": "^3.7.3"
