--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.0.12",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
+    "pdfkit": "^0.13.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
