--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^14.2.0",
     "email-templates": "^11.0.3",
     "express": "^4.17.1",
+    "ics": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.2.0",
     "mongoose": "^6.0.12",
