--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "migrate": "node tools\\mt.js",
     "testdb": "node tools\\testdb.js",
     "fixbug": "node tools\\fixprodbug.js",
-    "fixbug2": "node tools\\fixprodbug2.js"
+    "fixbug2": "node tools\\fixprodbug2.js",
+    "fixbug3": "node tools\\fixprodbug3.js"
   },
   "author": "BM",
   "license": "ISC",
